src/assets/index.css
@font-face {
  font-family: 'Major Mono Display';
  font-style: normal;
  font-weight: 400;
  src: local('Major Mono Display'),
    url(./fonts/MajorMonoDisplay-Regular.ttf) format('truetype');
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(./fonts/Material-Icons-Round.ttf) format('truetype');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.material-icons.md-18 {
  font-size: 18px;
}
.material-icons.md-24 {
  font-size: 24px;
}
.material-icons.md-36 {
  font-size: 36px;
}
.material-icons.md-48 {
  font-size: 48px;
}

html,
body,
#root,
.container {
  height: 100%;
}

body {
  margin: 0;
  padding: 0;
  background-color: black;
  color: white;
  font-size: 2em;
  font-family: sans-serif;
  user-select: none;
  overflow: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/**
 *
 * TYPOGRAPHY
 *
 */

.mono {
  font-family: 'Major Mono Display';
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}

.etched {
  text-shadow: 0 2px rgba(255, 255, 255, 0.8);
  font-size: 1.3rem;
  font-weight: bold;
  color: #b8bec5;
}

/**
 *
 * FLEX
 *
 */

.flex {
  display: flex;
}

.space-between {
  justify-content: space-between;
}

.center {
  display: flex;
  justify-content: center;
}

.column {
  flex-direction: column;
}

.valign {
  align-items: center;
}

/**
 *
 * TITLEBAR
 *
 */

.titlebar {
  z-index: 2;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.titlebar .streak {
  padding: 6px 14px;
  font-weight: 600;
  font-size: 0.6em;
  background-color: white;
  color: black;
  border-bottom-right-radius: 6px;
  transition: background-color 0.2s, color 0.2s;
}

.titlebar .streak.in-a-row {
  background-color: #ff694f;
  color: white;
}

.titlebar .streak span {
  margin-right: 5px;
}

.titlebar .controls {
  -webkit-app-region: no-drag;
  background-color: transparent;
  border-bottom-left-radius: 4px;
}

.titlebar.is-draggable {
  -webkit-app-region: drag;
}

.titlebar i {
  text-align: center;
  width: 46px;
  padding: 6px;
  cursor: pointer;
  transition: background-color 0.2s, border 0.2s;
}

.titlebar i:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.titlebar i.danger:hover {
  background-color: #ff5f56;
}

/**
 *
 * COUNTER
 *
 */

.counter {
  position: absolute;
  bottom: -107px;
  height: 0;
  width: 0;
  border: 0 solid #2f88ff;
  border-radius: 50%;
  margin-bottom: 56px;
  transition: border 0.2s ease;
  z-index: 1;
}

.counter.counting {
  border-color: #2f88ff;
}

.counter.pausing {
  border-color: #14b07b;
}

.counter-display {
  z-index: 3;
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: 'Major Mono Display';
  margin: 0;
  cursor: pointer;
  transition: top 0.5s, font-size 0.5s, color 0.5s;
}

.counter-display-main {
  top: 50%;
  font-size: 1.8em;
}

.counter-display-secondary,
.counter-display-swap {
  top: 60%;
  font-size: 1em;
  color: rgba(255, 255, 255, 0.4);
}

.counter-display-swap:hover {
  color: rgba(255, 255, 255, 0.7);
}

.counter.counting ~ .sub-action {
  z-index: 1;
}

.sub-action {
  color: rgba(255, 255, 255, 0.3);
  font-size: 16px;
  cursor: pointer;
  transition: padding 0.2s, border-radius 0.2s, background-color 0.2s,
    color 0.2s, opacity 0.2s;
}

.sub-action:hover {
  color: rgba(255, 255, 255, 0.7);
  padding: 8px 12px;
  border-radius: 17px;
  background-color: rgba(255, 255, 255, 0.2);
}

.sub-action.active {
  color: rgba(255, 255, 255, 0.7);
  border-radius: 17px;
}

.sub-action.counting,
.sub-action.pausing {
  opacity: 0;
}

/**
 *
 * FOOTER
 *
 */

footer {
  z-index: 4;
  height: 56px;
  width: 100%;
  position: absolute;
  bottom: 0;
  transition: height 0.2s;
}

footer.extended {
  height: 90%;
}

/* FOOTER HEADER */

.footer-header {
  position: relative;
  display: flex;
  justify-content: space-around;
  height: 56px;
  width: 100%;
  background-color: white;
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  transition: height 0.2s;
}

.footer-header button {
  height: 56px;
  width: 56px;
}

/* FOOTER CONTENT */

.footer-content {
  height: 90%;
  width: 100%;
  color: black;
  background-color: rgba(255, 255, 255, 0.98);
  box-shadow: inset 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
}

.footer-content button {
  border-radius: 6px;
}

/* EDIT TIMER */

.timer-container {
  padding: 26px;
}

.timer-container header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 30px;
}

.timer-container h3 {
  font-size: 0.8em;
}

.timer-container .field {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px 6px;
}

.timer-container label {
  font-size: 0.6em;
  font-family: sans-serif;
  color: rgb(51, 51, 51);
}

.timer-container input[type='number'] {
  height: 36px;
  width: 50px;
  padding-left: 10px;
  font-size: 0.7em;
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  border: 1px solid rgba(0, 0, 0, 0.2);
}

.timer-container .has-suffix {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.timer-container input[type='number'] + .suffix {
  height: 38px;
  width: 100%;
  padding: 0 6px;
  font-size: 0.7em;
  text-align: center;
  line-height: 38px;
  background-color: #f3f3f3;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-left: none;
}

.timer-container input:focus {
  outline: none;
}

.timer-container .card {
  margin-bottom: 26px;
}

/**
 *
 * STATISTICS
 *
 */

.statistics-container {
  display: flex;
  flex-direction: column;
  padding: 26px;
}

.statistics-container .cards {
  display: flex;
  justify-content: space-evenly;
  width: 100%;
  margin-bottom: 18px;
}

.statistics-container .cards .card {
  display: flex;
  flex-direction: column;
  width: 40%;
}

.chart-container {
  height: 100%;
  width: 100%;
}

.chart-container .center {
  margin-bottom: 18px;
}

.chart-container .center button {
  margin: 0 6px;
}

/**
 *
 * GOALS
 *
 */

.goals {
  height: 220px;
  overflow-y: overlay;
  overflow-x: hidden;
  padding: 0 20px;
}

::-webkit-scrollbar {
  width: 6px;
}
::-webkit-scrollbar-thumb {
  background: #e1e1e1;
  border: 0px none #ffffff;
  border-radius: 32px;
}
::-webkit-scrollbar-track {
  background: transparent;
  border: 0px none #ffffff;
  border-radius: 31px;
}

.goals .card {
  padding: 12px 16px;
  margin-bottom: 12px;
}

.goals .card.success {
  border-left: 6px solid #14b07b;
}

.goals .card.in-progress {
  border-left: 6px solid #ffbb23;
}

.goals .card span {
  font-size: 0.7em;
}

.goals .card span.success {
  color: #14b07b;
}

.goals .card span.in-progress {
  color: #ffbb23;
}

.goals .card:not(.goals-add) button.circle {
  position: absolute;
  height: 16px;
  width: 16px;
  right: 0;
  top: 0;
  transition: opacity 0.2s, background-color 0.2s, color 0.2s;
  opacity: 0;
  background: transparent;
}

.goals .card.goals-add button.circle {
  position: absolute;
  right: -10px;
  top: 10px;
}

.goals .card.goals-add button.circle:hover {
  background-color: white;
  border: 1px solid black;
}

.goals .card:not(.goals-add):hover button.circle {
  opacity: 1;
}

.goals .card:not(.goals-add) button.circle:hover {
  color: #ff5f56;
}

.goals .circle.add {
  position: absolute;
  border: 2px solid black;
  background-color: white;
  height: 32px;
  width: 32px;
  color: black;
  left: 6px;
  transition: filter 0.2s;
  margin-top: 12px;
}

.goals .circle.add:hover {
  filter: brightness(70%);
}

/* GOALS ADD INPUT */

.goals-add {
  border-left: 6px solid #2f88ff !important;
  height: 26px;
}

.goals-add label {
  font-size: 0.65em;
  margin-right: 6px;
}

.goals-add label ~ span {
  font-size: 0.65em;
  margin: 0 6px;
}

.goals-add input[type='number'] {
  width: 50px;
  text-align: center;
}

.goals-add input,
select {
  font-size: 0.6em;
  border: none;
  border-bottom: 1px solid black;
}

.goals-add select {
  padding-bottom: 3px;
}

/* NO GOALS */

.no-goals {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 130px;
}

.no-goals p {
  text-align: center;
  margin-bottom: 12px;
}

.no-goals p:not(.etched) {
  font-size: 1.3rem;
}

/**
 *
 * CARDS
 *
 */

.card {
  position: relative;
  padding: 8px;
  border-radius: 4px;
  background-color: white;
  border: 1px solid #d1d5da;
  padding-top: 18px;
}

.card > h3 {
  position: absolute;
  top: -13px;
  font-size: 0.7em;
}

.card-item {
  padding: 8px 16px;
  font-size: 0.7em;
  border-radius: 6px;
}

.card-item span[role='img'] {
  margin-right: 8px;
}

/**
 *
 * BUTTONS
 *
 */

button {
  display: flex;
  align-items: center;
  font-size: 0.6em;
  border: none;
  background-color: white;
  transition: background-color 0.2s;
  cursor: pointer;
  padding: 8px 16px;
}

button.circle {
  justify-content: center;
  padding: 0;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  background-color: rgb(238, 238, 238);
}

button:not(.overlap):hover {
  background-color: rgba(0, 0, 0, 0.1);
  color: black;
}

button[disabled] {
  cursor: default;
  background-color: transparent !important;
  color: black !important;
}

button:focus {
  outline: none;
}

.overlap {
  position: absolute;
  top: -26px;
  left: 50%;
  transform: translateX(-50%);
  color: black;
  border-radius: 50%;
  border-top: 1px solid rgba(255, 255, 255, 0.4);
  box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
    0 1px 5px 0 rgba(0, 0, 0, 0.2);
}

button.counting {
  background-color: #2f88ff;
  color: white;
}

button.pausing {
  background-color: #14b07b;
  color: white;
}

/**
 *
 * STATES
 *
 */

.active {
  background-color: rgba(0, 0, 0, 0.1);
}

.selected {
  border: 1px solid black;
}

.hide {
  display: none !important;
}

.window-compacted .hidden-on-compacted,
.window-restored .hidden-on-restored {
  visibility: hidden;
}

.window-compacted .remove-on-compacted,
.window-restored .remove-on-restored {
  display: none;
}

.window-compacted footer {
  height: 50%;
}

.window-compacted .footer-header {
  background-color: transparent;
}

